// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`banner.js - Banner class Совпадает снапшот для устройств без пульта 1`] = `
<body>
  <div
    id="root"
  >
    <div
      style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; display: flex;"
    >
      <div
        style="margin: auto; flex-shrink: 0; flex-grow: 0; max-width: 100vw; max-height: 100vh; padding: 5px; box-sizing: border-box; display: flex; flex-direction: column; align-items: strength;"
      >
        <iframe
          height="100px"
          id="plasma-ad-frame"
          src="url"
          width="150px"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`banner.js - Banner class Совпадает снапшот для устройств с пультом 1`] = `
<body>
  <div
    id="root"
  >
    <div
      style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; display: flex;"
    >
      <div
        style="margin: auto; flex-shrink: 0; flex-grow: 0; max-width: 100vw; max-height: 100vh; padding: 5px; box-sizing: border-box; display: flex; flex-direction: column; align-items: strength;"
      >
        <div
          style="display: flex; align-items: center; box-sizing: border-box; padding: 5px; flex-grow: 0; flex-shrink: 0;"
        >
          <div
            style="color: white; flex-grow: 1; flex-shrink: 1;"
          >
            Реклама закроется через 
            <span
              id="plasma-ad-time-to-close"
            >
              10
            </span>
            с
          </div>
          <div
            class="back-title"
            style="color: white;"
          />
        </div>
        <a
          href="https://plasma.sberdevices.ru/"
          id="plasma-ad-banner-link"
          style="flex-grow: 1; flex-shrink: 1;"
          target="_blank"
        >
          <iframe
            height="100px"
            id="plasma-ad-frame"
            src="url"
            width="150px"
          />
        </a>
      </div>
    </div>
  </div>
</body>
`;
